@@ -1,5 +1,5 @@
 /*
- *  Copyright (C) 2006-2009  Anders Gavare.  All rights reserved.
+ *  Copyright (C) 2006-2011  Anders Gavare.  All rights reserved.
  *
  *  Redistribution and use in source and binary forms, with or without
  *  modification, are permitted provided that the following conditions are met:
@@ -58,7 +58,7 @@
 #include "thirdparty/dreamcast_sysasicvar.h"
 
 
-#define debug fatal
+// #define debug fatal
 
 #define	N_MAPLE_PORTS		4
 
